[workspace]
resolver = "2"
members = [
  "devenv",
  "devenv-activity",
  "devenv-activity-macros",
  "devenv-cache-core",
  "devenv-core",
  "devenv-eval-cache",
  "devenv-nix-backend",
  "devenv-nix-backend-macros",
  "devenv-run-tests",
  "devenv-snix-backend",
  "devenv-tasks",
  "devenv-tui",
  "nix-conf-parser",
  "tokio-shutdown",
  "xtask",
]

[workspace.package]
version = "2.0.0"
edition = "2024"
license = "APACHE-2.0"
homepage = "https://devenv.sh/"
repository = "https://github.com/cachix/devenv/"

[workspace.dependencies]
devenv = { path = "devenv" }
devenv-activity = { path = "devenv-activity" }
devenv-activity-macros = { path = "devenv-activity-macros" }
devenv-core = { path = "devenv-core" }
devenv-eval-cache = { path = "devenv-eval-cache" }
devenv-run-tests = { path = "devenv-run-tests" }
devenv-snix-backend = { path = "devenv-snix-backend" }
devenv-nix-backend = { path = "devenv-nix-backend" }
devenv-nix-backend-macros = { path = "devenv-nix-backend-macros" }
devenv-tasks = { path = "devenv-tasks" }
devenv-tui = { path = "devenv-tui" }
devenv-cache-core = { path = "devenv-cache-core" }
nix-conf-parser = { path = "nix-conf-parser" }
tokio-shutdown = { path = "tokio-shutdown" }
xtask = { path = "xtask" }

nix-bindings-flake = { git = "https://github.com/cachix/nix-bindings-rust.git", branch = "for-upstream" }
nix-bindings-expr = { git = "https://github.com/cachix/nix-bindings-rust.git", branch = "for-upstream" }
nix-bindings-store = { git = "https://github.com/cachix/nix-bindings-rust.git", branch = "for-upstream" }
nix-bindings-util = { git = "https://github.com/cachix/nix-bindings-rust.git", branch = "for-upstream" }
nix-bindings-fetchers = { git = "https://github.com/cachix/nix-bindings-rust.git", branch = "for-upstream" }
nix-cmd = { git = "https://github.com/cachix/nix-bindings-rust.git", branch = "for-upstream" }
nix-bindings-bindgen-raw = { git = "https://github.com/cachix/nix-bindings-rust.git", branch = "for-upstream" }

anyhow = "1.0.92"
ansiterm = "0.12.2"
astral-tokio-tar = "0.5.6"
async-trait = "0.1"
binaryornot = "1.0.0"
blake3 = "1.8.2"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5.48", features = ["derive", "cargo", "env"] }
clap_complete = { version = "4.5.58", features = ["unstable-dynamic"] }
cstr = "0.2"
cli-table = "0.5.0"
console = "0.16.1"
dotlock = "0.5.0"
dialoguer = "0.12.0"
fd-lock = "4"
futures = "0.3.31"
hex = "0.4.3"
hostname = "0.4.1"
humantime = "2"
include_dir = "0.7.4"
indexmap = "2.11.4"
indoc = "2.0.6"
lazy_static = "1.5.0"
libc = "0.2.153"
pathdiff = "0.2.3"
miette = { version = "7.6.0", features = ["fancy"] }
nix = { version = "0.30.1", features = ["signal", "process"] }
num_enum = "0.7"
once_cell = "1.21.3"
petgraph = "0.8.2"
pretty_assertions = { version = "1.4.1", features = ["unstable"] }
netstat2 = "0.11"
rand = "0.8.5"
regex = "1.11.3"
schemars = "1.0.4"
schematic = { version = "0.18.12", features = [
  "schema",
  "yaml",
  "renderer_template",
  "renderer_json_schema",
] }
secrecy = "0.10"
secretspec = { git = "https://github.com/cachix/secretspec", branch = "perf/onepassword-batch-fetch" }
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
serde_repr = "0.1.20"
serde_with = "3"
serde_yaml = "0.9.34"
ser_nix = "0.2.1"
similar = "2.7.0"
sha2 = "0.10.9"
shell-escape = "0.1.5"
sqlx = { version = "0.8.6", features = ["time", "sqlite", "runtime-tokio"] }
strum = { version = "0.27", features = ["derive"] }
tempfile = "3.23.0"
termimad = "0.30.0"
thiserror = "2.0.16"
tracing = { version = "0.1.41", features = ["valuable"] }
tracing-subscriber = { version = "0.3.20", features = [
  "env-filter",
  "json",
  "valuable",
] }
valuable = { version = "0.1", features = ["derive"] }
json-subscriber = { version = "0.2.6" }
tracing-indicatif = "=0.3.9"
indicatif = "0.17.11"
tokio = { version = "1.47.1", features = [
  "process",
  "fs",
  "io-util",
  "macros",
  "rt-multi-thread",
  "sync",
  "time",
] }
tokio-util = { version = "0.7.16", features = ["io"] }
tokio-stream = "0.1"
uuid = { version = "1.18", features = ["v4"] }
which = "8.0.0"
whoami = "1.6.1"
xdg = "3.0.0"
walkdir = "2.5"
url = "2"
human-repr = "1.1"
insta = { version = "1.40", features = ["filters", "json"] }

reqwest = { version = "0.13", features = ["json", "query", "stream"] }
rmcp = { version = "0.7", features = [
  "server",
  "transport-io",
  "transport-streamable-http-server",
] }
axum = "0.8"
rmcp-macros = "0.7"

# Optional snix dependencies
snix-eval = { git = "https://github.com/cachix/snix", rev = "50b41ae7e05b423a7525b4dda53d372a71931506" }
snix-glue = { git = "https://github.com/cachix/snix", rev = "50b41ae7e05b423a7525b4dda53d372a71931506" }
snix-castore = { git = "https://github.com/cachix/snix", rev = "50b41ae7e05b423a7525b4dda53d372a71931506" }
snix-store = { git = "https://github.com/cachix/snix", rev = "50b41ae7e05b423a7525b4dda53d372a71931506" }
snix-build = { git = "https://github.com/cachix/snix", rev = "50b41ae7e05b423a7525b4dda53d372a71931506" }
nix-compat = { git = "https://github.com/cachix/snix", rev = "50b41ae7e05b423a7525b4dda53d372a71931506" }
nix-compat-derive = { git = "https://github.com/cachix/snix", rev = "50b41ae7e05b423a7525b4dda53d372a71931506" }

# Ensure crossterm versions match between these
iocraft = "0.7.16"
crossterm = "0.28.1"

[patch.crates-io]
# Patched TUI dependencies to supported rendering to stderr
iocraft = { git = "https://github.com/sandydoo/iocraft", branch = "feat-configure-output" }
crossterm = { git = "https://github.com/sandydoo/crossterm", branch = "0.28-cachix" }

[profile.release]
strip = "symbols"
lto = "fat"

# Fast release build without LTO
# TODO: using underscores because of a normalization bug in buildRustPackage
[profile.release_fast]
inherits = "release"
lto = false

# Retain debug symbols in release builds for better backtraces
[profile.release_with_debug]
inherits = "release_fast"
debug = true
