[workspace]
resolver = "2"
members = [
  "devenv",
  "devenv-activity",
  "devenv-activity-macros",
  "devenv-cache-core",
  "devenv-core",
  "devenv-eval-cache",
  "devenv-event-sources",
  "devenv-nix-backend",
  "devenv-nix-backend-macros",
  "devenv-processes",
  "devenv-reload",
  "devenv-run-tests",
  "devenv-shell",
  "devenv-snix-backend",
  "devenv-tasks",
  "devenv-tui",
  "nix-conf-parser",
  "tokio-shutdown",
  "xtask",
]

[workspace.package]
version = "2.1.0"
edition = "2024"
license = "APACHE-2.0"
homepage = "https://devenv.sh/"
repository = "https://github.com/cachix/devenv/"

[workspace.dependencies]
devenv = { path = "devenv" }
devenv-activity = { path = "devenv-activity" }
devenv-activity-macros = { path = "devenv-activity-macros" }
devenv-core = { path = "devenv-core" }
devenv-eval-cache = { path = "devenv-eval-cache" }
devenv-event-sources = { path = "devenv-event-sources" }
devenv-processes = { path = "devenv-processes" }
devenv-snix-backend = { path = "devenv-snix-backend" }
devenv-nix-backend = { path = "devenv-nix-backend" }
devenv-nix-backend-macros = { path = "devenv-nix-backend-macros" }
devenv-tasks = { path = "devenv-tasks" }
devenv-tui = { path = "devenv-tui" }
devenv-reload = { path = "devenv-reload" }
devenv-shell = { path = "devenv-shell" }
devenv-cache-core = { path = "devenv-cache-core" }
nix-conf-parser = { path = "nix-conf-parser" }
tokio-shutdown = { path = "tokio-shutdown" }

nix-bindings-flake = { git = "https://github.com/cachix/nix-bindings-rust.git", branch = "2.34" }
nix-bindings-expr = { git = "https://github.com/cachix/nix-bindings-rust.git", branch = "2.34" }
nix-bindings-store = { git = "https://github.com/cachix/nix-bindings-rust.git", branch = "2.34" }
nix-bindings-util = { git = "https://github.com/cachix/nix-bindings-rust.git", branch = "2.34" }
nix-bindings-fetchers = { git = "https://github.com/cachix/nix-bindings-rust.git", branch = "2.34" }
nix-cmd = { git = "https://github.com/cachix/nix-bindings-rust.git", branch = "2.34" }
nix-bindings-bindgen-raw = { git = "https://github.com/cachix/nix-bindings-rust.git", branch = "2.34" }

libghostty-vt = { git = "https://github.com/Uzaaft/libghostty-rs.git", branch = "master" }
libghostty-vt-sys = { git = "https://github.com/Uzaaft/libghostty-rs.git", branch = "master", default-features = false, features = ["pkg-config"] }
base64 = "0.22"
anyhow = "1.0.102"
async-priority-channel = "0.2.0"
async-trait = "0.1"
# Pinned to 1.8.3: blake3 1.8.4 upgraded to digest 0.11 which is incompatible
# with snix-castore (uses digest 0.10 APIs).
blake3 = "=1.8.3"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive", "cargo", "env"] }
clap_complete = { version = "4.6.3", features = ["unstable-dynamic"] }
clap_mangen = "0.3.0"
cstr = "0.2"
cli-table = "0.5.0"
console = "0.16.3"
dialoguer = "0.12.0"
fd-lock = "4"
futures = "0.3.32"
hex = "0.4.3"
hostname = "0.4.2"
humantime = "2"
include_dir = "0.7.4"
indexmap = "2.14.0"
indoc = "2.0.7"
pathdiff = "0.2.3"
miette = { version = "7.6.0", features = ["fancy"] }
nix = { version = "0.31", features = ["fs", "process", "signal"] }
num_enum = "0.7"
once_cell = "1.21.4"
petgraph = "0.8.3"
pretty_assertions = { version = "1.4.1", features = ["unstable"] }
netstat2 = "0.11"
regex = "1.12.3"
schemars = "1.2.1"
schematic = { version = "0.19", features = [
  "schema",
  "yaml",
  "renderer_template",
  "renderer_json_schema",
] }
secrecy = "0.10"
# https://github.com/mikaelmello/inquire/pull/330
secretspec = { git = "https://github.com/cachix/secretspec", tag = "v0.8.0", features = [
  "cli",
  "keyring",
  "gcsm",
  "awssm",
  "vault",
] }
semver = "1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_repr = "0.1.20"
serde_with = "3"
serde_yaml = "0.9.34"
ser_nix = "0.2.4"
similar = "3.1.0"
sha2 = "0.11.0"
shell-escape = "0.1.5"
sqlx = { version = "0.8.6", features = ["time", "sqlite", "runtime-tokio"] }
strum = { version = "0.28", features = ["derive"] }
tempfile = "3.27.0"
termimad = "0.34"
tokio-test = "0.4"
thiserror = "2.0.18"
tracing = { version = "0.1.44", features = ["valuable"] }
tracing-subscriber = { version = "0.3.23", features = [
  "env-filter",
  "json",
  "valuable",
] }
valuable = { version = "0.1", features = ["derive"] }
json-subscriber = { version = "0.2.8" }
tokio = { version = "1.52.1", features = [
  "process",
  "fs",
  "io-util",
  "macros",
  "rt-multi-thread",
  "sync",
  "time",
] }
tokio-util = { version = "0.7.18", features = ["io"] }
tokio-stream = "0.1"
uuid = { version = "1.23", features = ["v4"] }
which = "8.0.2"
whoami = "2.1.2"
xdg = "3.0.0"
walkdir = "2.5"
globset = "0.4"
url = "2"
human-repr = "1.1"
insta = { version = "1.47", features = ["filters", "json"] }
notify = { version = "8", default-features = false }
watchexec = "8.2"
watchexec-filterer-globset = "8.0"
watchexec-supervisor = "5.2"
signal-hook = "0.4"
signal-hook-tokio = { version = "0.4", features = ["futures-v0_3"] }
socket2 = "0.6"
process-wrap = { version = "9.1", features = ["tokio1"] }
portable-pty = "0.9.0"
vergen-gitcl = "9.1"
ignore = "0.4.25"
proptest = "1.11"
libc = "0.2"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "parsing", "extra-traits"] }

reqwest = { version = "0.13", features = ["json", "query", "stream"] }
axum = "0.8"
caps = "0.5"
rmcp = { version = "1.6", features = [
  "server",
  "transport-io",
  "transport-streamable-http-server",
] }
sd-notify = "0.5"

# Optional OpenTelemetry dependencies
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31", default-features = false, features = ["trace"] }
tracing-opentelemetry = "0.32"

# Optional snix dependencies
snix-eval = { git = "https://github.com/cachix/snix", rev = "50b41ae7e05b423a7525b4dda53d372a71931506" }
snix-glue = { git = "https://github.com/cachix/snix", rev = "50b41ae7e05b423a7525b4dda53d372a71931506" }
snix-castore = { git = "https://github.com/cachix/snix", rev = "50b41ae7e05b423a7525b4dda53d372a71931506" }
snix-store = { git = "https://github.com/cachix/snix", rev = "50b41ae7e05b423a7525b4dda53d372a71931506" }
snix-build = { git = "https://github.com/cachix/snix", rev = "50b41ae7e05b423a7525b4dda53d372a71931506" }
nix-compat = { git = "https://github.com/cachix/snix", rev = "50b41ae7e05b423a7525b4dda53d372a71931506" }
nix-compat-derive = { git = "https://github.com/cachix/snix", rev = "50b41ae7e05b423a7525b4dda53d372a71931506" }

# Ensure crossterm versions match between these
iocraft = { version = "=0.8.0", features = ["unstable-output-streams"] }
crossterm = "0.29.0"

[patch.crates-io]
# Waiting on iocraft release with stderr rendering support
# https://github.com/ccbrown/iocraft/pull/157
iocraft = { git = "https://github.com/cachix/iocraft", branch = "row-level-diff" }
# https://github.com/crossterm-rs/crossterm/pull/1026
crossterm = { git = "https://github.com/cachix/crossterm", branch = "0.29-cachix" }

# Improve performance of test runs
[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[profile.release]
lto = "thin"
panic = "abort"
strip = true

# A profiling release build that retains debug symbols for better backtraces
[profile.profiling]
inherits = "release"
debug = true
strip = false
lto = false
