[tool.poetry]
name = "devenv"
version = "1.0"
description = "Fast, Declarative, Reproducible, and Composable Developer Environments using Nix"
authors = ["Domen Kožar <domen@cachix.org>"]
readme = "README.md"
repository = "https://github.com/cachix/devenv"
packages = [{include = "devenv", from = "src"}]
include = [
    { path = "src", format = ["sdist", "wheel"] },
    { path = "examples/simple", format = ["sdist", "wheel"] }
]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
click = "^8.1.4"
strictyaml = "^1.7.3"
terminaltables = "^3.1.10"
filelock = "^3.12.0"
requests = "^2.31.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
pillow = "^9.5.0"
cairosvg = "^2.7.0"
mkdocs-markdownextradata-plugin = "^0.2.5"
mkdocs-include-markdown-plugin = "^4.0.4"
mkdocs-rss-plugin = "^1.8.0"
mkdocs-material = "^9.1.19"

[tool.poetry.scripts]
devenv = "devenv.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
