[tool.poetry]
name = "devenv"
version = "0"
description = ""
authors = ["Domen Kožar <domen@dev.si>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
pillow = "^10.0.1"
cairosvg = "^2.7.0"
mkdocs-markdownextradata-plugin = "^0.2.5"
mkdocs-include-markdown-plugin = "^6.0.1"
mkdocs-material = "^9.4.0"
mkdocs-rss-plugin = {git = "https://github.com/cachix/mkdocs-rss-plugin", rev = "no-git"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
