[package]
name = "devenv-cache-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Database
turso.workspace = true
geni.workspace = true
include_dir.workspace = true

# Error handling
thiserror.workspace = true
miette.workspace = true

# Hashing
blake3.workspace = true

# File operations
walkdir.workspace = true
tempfile.workspace = true

# Async runtime
tokio = { workspace = true, features = ["fs", "macros", "time"] }

# Logging
tracing.workspace = true
serde_json.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
