[package]
name = "devenv-eval-cache"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
blake3.workspace = true
futures.workspace = true
lazy_static.workspace = true
miette.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_repr.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
devenv-cache-core.workspace = true

[dev-dependencies]
tempfile.workspace = true
