[package]
name = "devenv-eval-cache"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
blake3.workspace = true
devenv-cache-core.workspace = true
include_dir.workspace = true
devenv-core.workspace = true
ser_nix.workspace = true
futures.workspace = true
miette.workspace = true
num_enum.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_repr.workspace = true
turso.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true

[features]
default = []
integration-tests = []
