[package]
name = "devenv-generate"
version = "1.4.1"
edition.workspace = true
license.workspace = true

[dependencies]
devenv.workspace = true

clap = { workspace = true, features = ["derive"] }
console.workspace = true
dialoguer.workspace = true
indoc.workspace = true
miette.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-tar.workspace = true
tracing.workspace = true
tokio-util.workspace = true
similar.workspace = true
binaryornot.workspace = true
once_cell.workspace = true
