[package]
name = "devenv-generate"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
devenv.workspace = true
http-client-tls.workspace = true

binaryornot.workspace = true
clap = { workspace = true, features = ["derive"] }
dialoguer.workspace = true
indoc.workspace = true
miette.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-tar.workspace = true
tracing.workspace = true
tokio-util.workspace = true
similar.workspace = true
