[package]
name = "devenv-processes"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Native process management for devenv"

[dependencies]
async-trait.workspace = true
devenv-activity.workspace = true
devenv-event-sources.workspace = true
daemonize.workspace = true
futures.workspace = true
miette.workspace = true
nix.workspace = true
process-wrap.workspace = true
serde.workspace = true
serde_json.workspace = true
shell-escape.workspace = true
signal-hook.workspace = true
signal-hook-tokio.workspace = true
socket2.workspace = true
tempfile.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
watchexec-supervisor.workspace = true

portable-pty.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
caps.workspace = true

[features]
default = []
test-all = ["test-file-watcher"]
test-file-watcher = []

[dev-dependencies]
sd-notify.workspace = true
