[package]
name = "devenv-reload"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Shell session manager with hot-reload capability"

[dependencies]
devenv-activity = { workspace = true }
devenv-file-watcher = { workspace = true }
devenv-shell = { workspace = true }
portable-pty = { workspace = true }
avt = { workspace = true }
tokio = { workspace = true, features = ["full"] }
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
blake3 = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
