[package]
name = "devenv-run-tests"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
clap.workspace = true
devenv.workspace = true
tempfile.workspace = true
tokio.workspace = true
tokio-shutdown.workspace = true
miette.workspace = true
serde.workspace = true
serde_yaml.workspace = true
