[package]
name = "devenv-shell"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Shell and PTY management for devenv"

[dependencies]
# PTY management
portable-pty = { workspace = true }

# Terminal handling
crossterm = { workspace = true }
iocraft = { workspace = true }
term_size = "0.3"

# Terminal state tracking
avt = { workspace = true }

# Async runtime
tokio = { workspace = true, features = ["sync", "rt"] }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# ANSI stripping
strip-ansi-escapes = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
regex = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
tokio-test = "0.4"
tempfile = { workspace = true }
insta = { workspace = true }

[features]
default = []
test-all = ["test-pty"]
test-pty = []
